--- a/server/files/etc/denyhosts.conf
+++ b/server/files/etc/denyhosts.conf
@@ -224,7 +224,7 @@ LOCK_FILE = /var/run/denyhosts.pid
 # Multiple email addresses can be delimited by a comma, eg:
 # ADMIN_EMAIL = foo@bar.com, bar@foo.com, etc@foobar.com
 #
-ADMIN_EMAIL = app@localhost
+ADMIN_EMAIL = admin@localhost
 #
 #######################################################################
 
