--- a/server/files/etc/mysql/my.cnf
+++ b/server/files/etc/mysql/my.cnf
@@ -74,7 +74,7 @@ query_cache_size        = 64M
 # Here you can see queries with especially long duration
 log_slow_queries        = /mnt/log/mysql/mysql-slow.log
 long_query_time = 2
-log-queries-not-using-indexes
+# log-queries-not-using-indexes
 #
 # The following can be used as easy to replay backup logs or for replication.
 #server-id              = 1
